manifests/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: passgen
  name: passgen
spec:
  ports:
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: passgen
    deploymentconfig: passgen
  sessionAffinity: None
  type: ClusterIP
