manifests/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: passgen
  name: passgen
spec:
  host: passgen.apps.extlab.io
  port:
    targetPort: 8443-tcp
  tls:
    termination: passthrough
  to:
    kind: Service
    name: passgen
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    host: passgen.apps.extlab.io
    routerName: router
    wildcardPolicy: None
